<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailProdukActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/home_coordlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_option">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:liftOnScroll="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">

                    <TextView
                        android:id="@+id/apptitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/detail_produk_title"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/produk_keranjang"
                        app:layout_constraintStart_toEndOf="@+id/produk_back"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/produk_back"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/detail_produk_desc_tombol_kembali"
                        android:scaleType="fitCenter"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:src="@drawable/ic_round_chevron_left_24"
                        android:tint="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/produk_keranjang"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/pad_md"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/detail_produk_desc_tombol_ke_keranjang"
                        android:scaleType="fitCenter"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:src="@drawable/ic_outline_shopping_cart_24"
                        android:tint="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".DetailProdukActivity">

                <ImageView
                    android:id="@+id/produk_gambar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/bisolvon_extra"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/detail_produk_desc_gambar_produk" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/produk_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/pad_lg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/produk_gambar">

                    <TextView
                        android:id="@+id/produk_diskon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_diskon"
                        android:contentDescription="@string/detail_produk_desc_diskon"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="@dimen/pad_sm"
                        android:paddingStart="@dimen/pad_md"
                        android:paddingEnd="@dimen/pad_md"
                        android:text="@string/detail_produk_diskon"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_md"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pad_lg"
                        android:contentDescription="@string/detail_produk_desc_harga_awal"
                        android:fontFamily="@font/montserrat"
                        android:padding="@dimen/pad_sm"
                        android:text="@string/detail_produk_harga_awal"
                        android:textSize="@dimen/text_md"
                        android:background="@drawable/shape_strikethrough"
                        app:layout_constraintLeft_toRightOf="@+id/produk_diskon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/produk_harga_final"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad_sm"
                        android:contentDescription="@string/detail_produk_desc_harga_final"
                        android:fontFamily="@font/montserrat"
                        android:padding="@dimen/pad_sm"
                        android:text="@string/detail_produk_harga_final"
                        android:textColor="@color/text_harga_detail_produk"
                        android:textSize="@dimen/text_lg"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/produk_diskon" />

                    <TextView
                        android:id="@+id/produk_nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad_sm"
                        android:contentDescription="@string/detail_produk_desc_nama_produk"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="@dimen/pad_sm"
                        android:text="@string/detail_produk_nama_produk"
                        android:textAllCaps="true"
                        android:textColor="@color/text_main"
                        android:textSize="@dimen/text_md"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/produk_harga_final" />

                    <TextView
                        android:id="@+id/produk_jenis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/pad_sm"
                        android:contentDescription="@string/detail_produk_desc_nama_produk"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/detail_produk_jenis_obat"
                        android:textAllCaps="true"
                        android:textColor="@color/text_sub"
                        android:textSize="@dimen/text_md"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/produk_nama"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/pad_sm"
                        android:padding="@dimen/pad_sm"
                        android:text="@string/detail_produk_deskripsi"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/produk_jenis" />

                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/pad_sm">

            <ImageButton
                android:id="@+id/produk_qty_kurang"
                android:layout_width="@dimen/qty_add"
                android:layout_height="@dimen/qty_add"
                android:background="@drawable/bg_btn_qty"
                android:src="@drawable/ic_baseline_remove_24"
                android:layout_marginEnd="@dimen/pad_sm"
                android:contentDescription="@string/detail_produk_desc_tombol_kurangi_qty" />

            <EditText
                android:id="@+id/produk_qty"
                android:layout_width="@dimen/et_height"
                android:layout_height="@dimen/qty_add"
                android:layout_marginEnd="@dimen/pad_sm"
                android:background="@drawable/bg_et_qty"
                android:text="@string/detail_produk_qty_default"
                android:textAlignment="center"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/produk_qty_tambah"
                android:layout_width="@dimen/qty_add"
                android:layout_height="@dimen/qty_add"
                android:background="@drawable/bg_btn_qty"
                android:src="@drawable/ic_baseline_add_24"
                android:contentDescription="@string/detail_produk_desc_tombol_tambah_qty" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_produk_tambah_ke_keranjang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_round_add_shopping_cart_24"
            android:drawablePadding="@dimen/pad_sm"
            android:drawableTint="@color/white"
            android:background="@drawable/bg_btn"
            android:textColor="@color/white"
            android:paddingStart="@dimen/pad_md"
            android:paddingEnd="@dimen/pad_md"
            android:layout_margin="@dimen/pad_md"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>