<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_xxl"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/login_title_text"
        android:textColor="@color/text_main"
        android:textSize="@dimen/text_xl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_subtitle_text"
        android:textColor="@color/text_sub"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <LinearLayout
        android:id="@+id/regist_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_subtitle"
        android:layout_marginBottom="@dimen/pad_xxl"
        android:paddingStart="@dimen/pad_xl"
        android:paddingEnd="@dimen/pad_xl">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_lg"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:autofillHints="example@domain.com"
                android:background="@drawable/bg_login_et"
                android:fontFamily="@font/montserrat"
                android:hint="@string/login_et_email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/pad_md"
                android:paddingEnd="@dimen/pad_md"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_md"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/pad_md"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_et_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:autofillHints="********"
                android:background="@drawable/bg_login_et"
                android:fontFamily="@font/montserrat"
                android:hint="@string/login_et_pass_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/pad_md"
                android:paddingEnd="@dimen/pad_md"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_md"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:text="@string/login_forgot_pass_text" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pad_xl"
            android:background="@drawable/bg_btn_disabled"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_btn_text"
            android:textSize="@dimen/text_md"
            android:textColor="@color/white"
            android:enabled="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regist_form"
        android:layout_marginTop="@dimen/pad_sm">

        <TextView
            android:id="@+id/login_regist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pad_sm"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_regist_text"
            android:textSize="@dimen/text_md" />

        <TextView
            android:id="@+id/login_regist_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login_regist_text_go"
            android:textSize="@dimen/text_md" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>