<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keranjang_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/krj_container_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/krjcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/img_krj_gambar_produk"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/bisolvon_extra"
                android:contentDescription="@string/keranjang_gambar_produk" />

            <TextView
                android:id="@+id/tv_krj_nama_produk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="marquee"
                android:lines="2"
                android:maxLines="3"
                android:text="@string/keranjang_nama_produk"
                android:textColor="@color/text_main"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/text_md"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                android:contentDescription="@string/keranjang_tombol_hapus_produk" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_krj_harga_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:ellipsize="marquee"
                    android:text="@string/keranjang_harga"
                    android:textColor="@color/text_main"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_md"
                    android:fontFamily="@font/montserrat"
                    android:scrollbarSize="@dimen/text_md"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/pad_sm">

                    <ImageButton
                        android:id="@+id/krj_qty_kurang"
                        android:layout_width="@dimen/qty_add"
                        android:layout_height="@dimen/qty_add"
                        android:background="@drawable/bg_btn_qty"
                        android:src="@drawable/ic_baseline_remove_24"
                        android:layout_marginEnd="@dimen/pad_sm"
                        android:contentDescription="@string/detail_produk_desc_tombol_kurangi_qty" />

                    <EditText
                        android:id="@+id/krj_qty"
                        android:layout_width="@dimen/et_height"
                        android:layout_height="@dimen/qty_add"
                        android:layout_marginEnd="@dimen/pad_sm"
                        android:background="@drawable/bg_et_qty"
                        android:text="@string/detail_produk_qty_default"
                        android:textAlignment="center"
                        android:importantForAutofill="no"
                        android:inputType="number" />

                    <ImageButton
                        android:id="@+id/krj_qty_tambah"
                        android:layout_width="@dimen/qty_add"
                        android:layout_height="@dimen/qty_add"
                        android:background="@drawable/bg_btn_qty"
                        android:src="@drawable/ic_baseline_add_24"
                        android:contentDescription="@string/detail_produk_desc_tombol_tambah_qty" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>